<resources>
    <string name="app_name">WorkoutApp</string>
    <string name="login_logo">WorkoutApp</string>
    <string name="login_email_hint">Your E-mail...</string>
    <string name="login_password_hint">Your Password...</string>
    <string name="login_button_text">Login</string>
    <string name="login_register_button_text">Need an account?</string>
    <string name="register_email_hint">E-mail</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm password</string>
    <string name="register_button_text">Register account</string>
    <string name="register_login_button_text">Already have an account?</string>
    <string name="menu_search_text">Search</string>
    <string name="menu_account_settings_text">Account settings</string>
    <string name="menu_logout_text">Logout</string>
    <string name="setup_name_hint">Your name...</string>
    <string name="setup_button_text">Save account settings</string>
</resources>
